OAS documentation added for products
